# MRPC-2025-homework

code/: calculate_results.py
code/src/map_server/map_render/src/: pcl_render_node.cpp
code/src/quadrotor_df/: CMakeLists.txt  README.md  package.xml
code/src/quadrotor_df/src/: differential_flatness.cpp
code/src/quadrotor_simulator/so3_control/src/: SO3Control.cpp  control_data.txt  control_timedata.txt  so3_control_nodelet.cpp
code/src/quadrotor_simulator/so3_quadrotor_simulator/src/: quadrotor_simulator_so3.cpp
code/src/quadrotor_simulator/so3_quadrotor_simulator/src/dynamics/: Quadrotor.cpp
code/src/trajectory_generator/include/: Astar_searcher.h
code/src/trajectory_generator/launch/: demo.launch
code/src/trajectory_generator/launch/rviz_config/: demo.rviz
code/src/trajectory_generator/src/: Astar_searcher.cpp  trajectory_generator_node.cpp  trajectory_generator_waypoint.cpp
documents/: problem1_solution.py  problem1_world_frame_quaternion.csv  problem3_solution.py
solutions/: df_quaternion.csv  result.txt
