<?xml version="1.0"?>
<package format="2">
  <name>quadrotor_df</name>
  <version>1.0.0</version>
  <description>Quadrotor Differential Flatness trajectory generator</description>
  
  <maintainer email="student@example.com">Student</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
  </export>
</package>
